# sesr

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/trajectories/basalt/: MH1_run2.txt  MH1_run3.txt  MH1_run4.txt  MH1_run5.txt  MH2_run1.txt  MH2_run2.txt  MH2_run4.txt  MH3_run1.txt  MH3_run2.txt  MH3_run3.txt  MH3_run4.txt  MH5_run2.txt  MH5_run3.txt  MH5_run4.txt  MH5_run5.txt  V11_run1.txt  V11_run3.txt  V22_run1.txt
data/trajectories/kimera/: MH01_run2.csv  MH02_run4.csv  MH03_run2.csv  MH05_run2.csv  V101_run1.csv  V202_run4.csv
data/trajectories/openvins/: MH02_run4.txt  MH03_run2.txt  MH05_run2.txt  V101_run5.txt  V202_run1.txt  V202_run4.txt
data/trajectories/orbslam3/: MH01_run1.txt  MH02_run4.txt  MH02_run5.txt  MH03_run2.txt  MH03_run3.txt  MH03_run4.txt  MH03_run5.txt  MH05_run3.txt  V101_run3.txt  V101_run4.txt  V101_run5.txt  V202_run1.txt  V202_run2.txt  V202_run4.txt
data/trajectories/rovio/: MH01_run3.txt  MH02_run1.txt  MH05_run3.txt  V202_run4.txt
results/: README.md  sesr_bench_results.json
results/tables/: table1_leaderboard.tex  table2_cstar.tex  table3_ate.tex
scripts/: convert_ns_to_seconds.py  evaluate_all.py  generate_key_figures.py  sesr_evaluate.py
scripts/runs/: odom_to_tum.py  pose_to_tum.py  run_all_basalt.sh  run_all_kimera.sh  run_all_openvins.sh  run_all_openvins_fixed.sh  run_all_orbslam3.sh  run_all_rovio.sh  run_all_svo2.sh  run_all_vins.sh
sesr_bench/: __init__.py  cli.py  evo_integration.py  metrics.py  profiles.py
tests/: test_metrics.py
(+74 files in other folders)
