[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sesr-bench"
version = "0.1.0"
description = "Clearance-aware evaluation for visual-inertial odometry"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Stavan Dholakia", email = "stavan@mefferdi.com"},
]
keywords = ["VIO", "SLAM", "benchmarking", "localization", "robotics", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
evo = ["evo>=1.20"]
plotting = ["matplotlib>=3.5", "seaborn>=0.12"]
all = ["evo>=1.20", "matplotlib>=3.5", "seaborn>=0.12"]

[project.urls]
Homepage = "https://github.com/stavandholakia/sesr-bench"
Repository = "https://github.com/stavandholakia/sesr-bench"
Documentation = "https://github.com/stavandholakia/sesr-bench#readme"

[project.scripts]
sesr-bench = "sesr_bench.cli:main"

[tool.setuptools.packages.find]
include = ["sesr_bench*"]
